--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
     <title>rmcsec</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&display=swap" rel="stylesheet">
   </head> 
   <body>
     <div class="TopBar">
@@ -13,5 +16,8 @@
       <a href="#writeups">Writeups</a>
       <a href="#contact">Contact</a>
     </div>
+  <div class="Logo">
+    <h1 class="title-font">RMCSEC</h1>
+  </div>
   </body>
 </html>
