--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&display=swap" rel="stylesheet">
+    <script type="module" src="https://md-block.verou.me/md-block.js"></script>
   </head> 
   <body>
     <div class="TopBar">
@@ -19,5 +20,21 @@
   <div class="Logo">
     <h1 class="title-font">RMCSEC</h1>
   </div>
+  <md-block>
+	# Heading
+
+	Text **bold text** *italic text* ~strike~
+
+	```js
+	test.foo();
+	```
+
+	```html
+	&lt;foo>
+	```
+
+	* List item 1
+	* List item 2
+</md-block>
   </body>
 </html>
