made body font :3

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <div class="Logo">
     <h1 class="title-font">RMCSEC</h1>
   </div>
-  <md-block>
+  <md-block class="body-font-regular">
 	# Heading
 
 	Text **bold text** *italic text* ~strike~
