--- a/index.html
+++ b/index.html
@@ -10,16 +10,15 @@
     <script type="module" src="https://md-block.verou.me/md-block.js"></script>
   </head> 
   <body>
-    <div class="TopBar">
-      <a href="#">Home</a>
-      <a href="#about">About</a>
-      <a href="#schedule">Schedule</a>
-      <a href="#writeups">Writeups</a>
-      <a href="#contact">Contact</a>
-    </div>
-  <div class="Logo">
-    <h1 class="title-font">RMCSEC</h1>
+  <div class="TopBar">
+    <a href="#">Home</a>
+    <a href="#about">About</a>
+    <a href="#schedule">Schedule</a>
+    <a href="#writeups">Writeups</a>
+    <a href="#contact">Contact</a>
   </div>
+  <img src="/img/fullsize.png"> 
+    
   <md-block class="body-font-regular">
 	# Heading
 
@@ -36,5 +35,5 @@
 	* List item 1
 	* List item 2
 </md-block>
-  </body>
+</body>
 </html>
