--- a/index.html
+++ b/index.html
@@ -10,30 +10,30 @@
     <script type="module" src="https://md-block.verou.me/md-block.js"></script>
   </head> 
   <body>
-  <div class="TopBar">
-    <a href="#">Home</a>
-    <a href="#about">About</a>
-    <a href="#schedule">Schedule</a>
-    <a href="#writeups">Writeups</a>
-    <a href="#contact">Contact</a>
-  </div>
-  <img src="/img/fullsize.png"> 
+    <div class="NavBar">
+      <a href="#">Home</a>
+      <a href="#about">About</a>
+      <a href="#schedule">Schedule</a>
+      <a href="#writeups">Writeups</a>
+      <a href="#contact">Contact</a>
+    </div>
+    <img src="img/fullsize.png" width="50%" height="auto" class="center"> 
     
-  <md-block class="body-font-regular">
-	# Heading
+    <md-block class="body-font-regular">
+	  # Heading
 
-	Text **bold text** *italic text* ~strike~
+	  Text **bold text** *italic text* ~strike~
 
-	```js
-	test.foo();
-	```
+	  ```js
+	  test.foo();
+	  ```
 
-	```html
-	&lt;foo>
-	```
+	  ```html
+	  &lt;foo>
+	  ```
 
 	* List item 1
 	* List item 2
-</md-block>
+  </md-block>
 </body>
 </html>
