--- a/index.html
+++ b/index.html
@@ -25,25 +25,7 @@
     <div class="f-writeup">
       <md-block id="render">
       </md-block>
+      <img src="img/fullsize.png" width="50%" class="center"> 
     </div>
-  </body>
-    <img src="img/fullsize.png" width="50%" height="auto" class="center"> 
-    
-    <md-block class="body-font-regular">
-	  # Heading
-
-	  Text **bold text** *italic text* ~strike~
-
-	  ```js
-	  test.foo();
-	  ```
-
-	  ```html
-	  &lt;foo>
-	  ```
-
-	* List item 1
-	* List item 2
-  </md-block>
 </body>
 </html>
