made site cleaner

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <div class="f-writeup">
       <md-block id="render">
       </md-block>
-      <img src="img/fullsize.png" width="50%" class="center"> 
     </div>
+      <img src="img/fullsize.png" width="30%" height="30%" class="center"> 
 </body>
 </html>
