Fixed site layout and rendering

--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
       <a href="#contact">Contact</a>
     </div>
   <div class="Logo">
-    <h1 class="title-font">RMCSEC</h1>
+    <!--<h1 class="title-font">RMCSEC</h1>-->
+    <img src="img/fullsize.png" width="10%" height="10%" class="center"> 
   </div>
     <div class="f-writeup">
       <md-block id="render">
       </md-block>
     </div>
-      <img src="img/fullsize.png" width="30%" height="30%" class="center"> 
 </body>
 </html>
