--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&display=swap" rel="stylesheet">
-    <script type="module" src="https://md-block.verou.me/md-block.js"></script>
-     <script src="script.js"></script> 
+     <script type="module" src="script.js"></script> 
   </head> 
   <body>
       <!--To do: center the damn bar-->
@@ -24,8 +23,7 @@
     <img src="img/fullsize.png" width="10%" height="10%" class="center"> 
   </div>
     <div class="f-writeup">
-      <md-block id="render">
-      </md-block>
+      <p id="render"></p>
     </div>
 </body>
 </html>
