navbar centered/fixed

--- a/index.html
+++ b/index.html
@@ -10,13 +10,15 @@
      <script type="module" src="script.js"></script> 
   </head> 
   <body>
-      <!--To do: center the damn bar-->
+      <!--To do: make navbar circle container-->
     <div class="NavBar">
-      <a href="#">Home</a>
-      <a href="#about">About</a>
-      <a href="#schedule">Schedule</a>
-      <a href="#writeups">Writeups</a>
-      <a href="#contact">Contact</a>
+      <ul>
+        <a href="#">Home</a>
+        <a href="#about">About</a>
+        <a href="#schedule">Schedule</a>
+        <a href="#writeups">Writeups</a>
+        <a href="#contact">Contact</a>
+      </ul>
     </div>
   <div class="Logo">
     <!--<h1 class="title-font">RMCSEC</h1>-->
