--- a/index.html
+++ b/index.html
@@ -11,14 +11,15 @@
   </head> 
   <body>
       <!--To do: make navbar circle container-->
-    <div class="NavBar">
-      <ul>
-        <a href="#">Home</a>
-        <a href="#about">About</a>
-        <a href="#schedule">Schedule</a>
-        <a href="#writeups">Writeups</a>
-        <a href="#contact">Contact</a>
-      </ul>
+    <div class="navbar">
+        <img src="img/mini.png" width="5%" margin="10%">
+        <ul>
+          <a href="#">Home</a>
+          <a href="#about">About</a>
+          <a href="#schedule">Schedule</a>
+          <a href="#writeups">Writeups</a>
+          <a href="#contact">Contact</a>
+        </ul>
     </div>
   <div class="Logo">
     <!--<h1 class="title-font">RMCSEC</h1>-->
