improved and stickied navbar

--- a/index.html
+++ b/index.html
@@ -7,23 +7,26 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&display=swap" rel="stylesheet">
-    <script type="module" src="script.js"></script> 
+    <script type="module" src="script.js"></script>
+    <link rel="icon" type="image/x-icon" href="img/favicon.ico">
   </head> 
   <body>
-      <!--To do: make navbar circle container-->
-    <div class="navbar">
-        <img src="img/mini.png" width="5%" margin="10%">
+    <!-- DO NOT PLACE ANYTHING ABOVE NAVBAR WITHIN BODY. BAD IDEA.-->
+    <!--To do: navbar glow + add bg-->
+    <div>
+    <div class="navbar">  
         <ul>
-          <a href="#">Home</a>
-          <a href="#about">About</a>
-          <a href="#schedule">Schedule</a>
-          <a href="#writeups">Writeups</a>
-          <a href="#contact">Contact</a>
+          <a href="#">HOME</a>
+          <a href="#about">ABOUT</a>
+          <a href="#schedule">SCHEDULE</a>
+          <a href="#writeups">WRITEUPS</a>
+          <a href="#contact">CONTACT</a>
         </ul>
     </div>
+  </div>
   <div class="Logo">
     <!--<h1 class="title-font">RMCSEC</h1>-->
-    <img src="img/fullsize.png" width="10%" height="10%" class="center"> 
+    <img src="img/fullsize.png" width="30%" class="center" position="fixed"> 
   </div>
     <div class="f-writeup">
       <p id="render"></p>
