Writeups Page template work

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&display=swap" rel="stylesheet">
     <script type="module" src="script.js"></script>
-    <script src="//code.jquery.com/jquery.min.js"></script>
+    <script src="https://code.jquery.com/jquery.min.js"></script>
     <link rel="icon" type="image/x-icon" href="img/favicon.ico">
   </head> 
   <body>
@@ -22,16 +22,11 @@
       $("#nav-placeholder").load("nav.html");
     });
   </script>
-  <div id="home">
     <div class="logo">
       <img src="img/fullsize.png" width="30%" class="center" position="fixed"> 
     </div>
     <div class="f-writeup">
       <p id="render"></p>
     </div>
-  </div>
-  <div id="about" style="display: none;">
-    <h1>About Page</h1><p>Learn more about us on this page.</p>
-  </div>
 </body>
 </html>
