--- a/nav.html
+++ b/nav.html
@@ -17,13 +17,46 @@
 	border-width: 1.4px;
   background-color: black;
 }
+a{ /* navbar */
+  color: white; 
+  text-decoration: none;
+  font-family: "Space Mono", monospace;
+  font-weight: 400;
+  font-style: normal;
+  margin:5%;
+  text-align: center;
+  font-size: 1.1vw; 
+}
+a:hover{ /* navbar */
+  color:#fdf800;
+}
+ul { /* navbar */
+  display: inline-block;
+  list-style-type: none;
+  margin: 0;
+  padding: 1.2vw;
+  overflow: hidden;
+  width: 100%;
+	height: 10%;
+  
+}
+#nav-placeholder{ /* navbar */
+  text-align: center;
+  display: inline-block;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 5vw;
+}
+
+
 </style>
 <div class="navbar">  
         <ul>
           <a href="/" class="l">HOME</a>
           <a href="/" class="l">ABOUT</a>
           <a href="/" class="l">SCHEDULE</a>
-          <a href="/" class="l">WRITEUPS</a>
+          <a href="/writeups.html" class="l">WRITEUPS</a>
           <a href="/" class="l">CONTACT</a>
         </ul>
 </div>
