--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <script src="https://code.jquery.com/jquery.min.js"></script>
     <link rel="icon" type="image/x-icon" href="img/favicon.ico">
   </head> 
-  <body>
+  <body onload="fetchData('/md/VikeCTF.md', 'render')">
     <!-- DO NOT PLACE ANYTHING ABOVE NAVBAR WITHIN BODY. BAD IDEA.-->
     <!--To do: navbar glow + add bg-->
   <div id="nav-placeholder">
