--- a/nav.html
+++ b/nav.html
@@ -17,7 +17,7 @@
 	border-width: 1.4px;
   background-color: black;
 }
-a{ /* navbar */
+.l{ /* navbar */
   color: white; 
   text-decoration: none;
   font-family: "Space Mono", monospace;
@@ -27,7 +27,7 @@ a{ /* navbar */
   text-align: center;
   font-size: 1.1vw; 
 }
-a:hover{ /* navbar */
+.l:hover{ /* navbar */
   color:#fdf800;
 }
 ul { /* navbar */
