--- a/writeups.html
+++ b/writeups.html
@@ -7,18 +7,46 @@
     <title>writeups</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <script type="module" src="script.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&display=swap" rel="stylesheet">
     <script src="https://code.jquery.com/jquery.min.js"></script>
   </head>
   <body>
     <div id="nav-placeholder"></div>
     <script>
+      async function getDirectory(dirName) {
+        let response = await fetch(dirName);
+        let str = await response.text();// JSON data from github
+        const data = await JSON.parse(str); //parsed into array
+        return data;
+      }
+      getDirectory("https://api.github.com/repos/rm-csec/rm-csec.github.io/contents/md").then(ls =>{
+        for (let i in ls) {
+          document.getElementById('divWriteups').innerHTML += "<a href=\""+ ls[i].path + "\" class=\"dirList\" onclick=\"cl()\">> "+ ls[i].name +"/</a>" + "<br>";
+        } 
+      }).catch(err => {
+        console.log(err);
+      });
+      const cl = (event) => {
+        event = event || window.event;
+        event.preventDefault();
+        console.log(event);
+        getDirectory("https://api.github.com/repos/rm-csec/rm-csec.github.io/contents/" + event.target.pathname).then(ls =>{
+          document.getElementById('divWriteups').innerHTML = "<a href=\""+ ls[0].path + "\" class=\"dirList\" onclick=\"fetchData(\'"+ ls[0].path + "\', \'divWriteups\'); gg();\">> "+ ls[0].name +"</a>" + "<br>";
+        }).catch(err => {
+          console.log(err);
+        });
+      };
+      const gg = (event) => {
+        event = event || window.event;
+        event.preventDefault();
+        fetchData()
+      };
       $(function(){
         $("#nav-placeholder").load("nav.html");
       });
     </script>
     <div id="divWriteups">
- Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent tristique feugiat augue, a cursus velit pulvinar sed. Quisque ac eros nunc. Donec ultricies, est eu venenatis elementum, libero justo rutrum velit, vel sollicitudin diam libero congue lacus. Donec fermentum vehicula enim, non rutrum quam. Vivamus quis blandit tellus, ac euismod elit. Praesent mi augue, viverra eu pretium quis, volutpat vestibulum orci. Phasellus mauris est, porta sit amet mauris non, tempus euismod nisl. Phasellus congue mi sed tristique eleifend. Etiam accumsan diam sapien, eget pellentesque mi eleifend sed. Etiam nec ipsum ac elit rutrum eleifend et eget quam. Quisque nisl dui, pulvinar sed placerat vel, ullamcorper at metus. 
     </div>
   </body>
 </html>
