--- a/writeups.html
+++ b/writeups.html
@@ -40,13 +40,12 @@
       const gg = (event) => {
         event = event || window.event;
         event.preventDefault();
-        fetchData()
       };
       $(function(){
         $("#nav-placeholder").load("nav.html");
       });
     </script>
-    <div id="divWriteups">
+    <div id="divWriteups" class="divWriteups">
     </div>
   </body>
 </html>
