--- a/writeups.html
+++ b/writeups.html
@@ -10,6 +10,12 @@
     <script type="module" src="script.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&display=swap" rel="stylesheet">
     <script src="https://code.jquery.com/jquery.min.js"></script>
+    <style>
+      img {
+        width: 100%;
+        height: 100%;
+      }
+    </style>
   </head>
   <body>
     <div id="nav-placeholder"></div>
@@ -32,7 +38,9 @@
         event.preventDefault();
         console.log(event);
         getDirectory("https://api.github.com/repos/rm-csec/rm-csec.github.io/contents/" + event.target.pathname).then(ls =>{
-          document.getElementById('divWriteups').innerHTML = "<a href=\""+ ls[0].path + "\" class=\"dirList\" onclick=\"fetchData(\'"+ ls[0].path + "\', \'divWriteups\'); gg();\">> "+ ls[0].name +"</a>" + "<br>";
+          for let (i in ls) {
+            document.getElementById('divWriteups').innerHTML = "<a href=\""+ ls[0].path + "\" class=\"dirList\" onclick=\"fetchData(\'"+ ls[0].path + "\', \'divWriteups\'); gg();\">> "+ ls[0].name +"</a>" + "<br>";
+          }
         }).catch(err => {
           console.log(err);
         });
