--- a/pages/index.html
+++ b/pages/index.html
@@ -2,8 +2,9 @@
     <!-- DO NOT PLACE ANYTHING ABOVE NAVBAR WITHIN BODY. BAD IDEA.-->
     <!--To do: navbar glow + add bg-->
     <div class="logo" id="logo">
-      <img src="img/fullsize.png" width="30%" class="center" position="fixed" onload="fetchData('/md/VikeCTF.md', 'render')"> 
+      <img src="img/fullsize.png" width="30%" class="center" position="fixed" onload="fetchData('/md/n00bzCTF_2024/web_focus-on-yourSELF.md', 'render')"> 
     </div>
+    <h3 id="fw-title">Featured Writeup</h3>
     <div class="f-writeup">
       <p id="render"></p>
     </div>
