--- a/404.html
+++ b/404.html
@@ -76,6 +76,8 @@ ul { /* navbar */
         </ul>
   </div>
   </div>
-  <div id="content"></div>
+  <div id="content">
+    
+  </div>
 </body>
 </html>
