--- a/index.html
+++ b/index.html
@@ -12,57 +12,9 @@
   <script type="module" src="js/script.js"></script>
   <script src="js/route.js"></script>
   <script src="js/writeups.js"></script>
-<style>
-.navbar {
-  width: 50vw;
-  margin: auto;
-  margin-top: 4vw;
-  padding-left: 1em;
-  padding-right: 1em;
-  box-sizing: border-box;
-  border-radius: 40px;
-  position: fixed;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  z-index: 99;
-  border-color: yellow;
-  border-style:solid;
-	border-width: 1.4px;
-  background-color: black;
-}
-.l{ /* navbar */
-  color: white; 
-  text-decoration: none;
-  font-family: "Space Mono", monospace;
-  font-weight: 400;
-  font-style: normal;
-  margin:5%;
-  text-align: center;
-  font-size: 1.1vw; 
-}
-.l:hover{ /* navbar */
-  color:#fdf800;
-}
-ul { /* navbar */
-  display: inline-block;
-  list-style-type: none;
-  margin: 0;
-  padding: 1.2vw;
-  overflow: hidden;
-  width: 100%;
-	height: 10%;
-  
-}
-#nav{ /* navbar */
-  text-align: center;
-  display: inline-block;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  margin-top: 5vw;
-}
-</style>
+  <style>
+      @import url('styles/style.css');
+  </style>
 </head>
 <body>
   <div id="nav">
