--- a/pages/index.html
+++ b/pages/index.html
@@ -1,8 +1,20 @@
 <body>
     <!-- DO NOT PLACE ANYTHING ABOVE NAVBAR WITHIN BODY. BAD IDEA.-->
     <!--To do: navbar glow + add bg-->
+    <section>
+      <span></span>
+      <span></span>
+      <span></span>
+      <span></span>
+      <span></span>
+      <span></span>
+      <span></span>
+      <span></span>
+      <span></span>
+      <span></span>
+  </section>
     <div class="logo" id="logo">
-      <img src="img/fullsize.png" width="30%" class="center" position="fixed" onload="fetchData('/md/n00bzCTF_2024/web_focus-on-yourSELF.md', 'render')"> 
+      <img src="img/fullsize.png" width="40%" class="center" position="fixed" onload="fetchData('/md/n00bzCTF_2024/web_focus-on-yourSELF.md', 'render')"> 
     </div>
     <div class="f-writeup">
       <p id="render"></p>
