Implemented routing for all writeup pages. Code decluttering needed

--- a/pages/writeups.html
+++ b/pages/writeups.html
@@ -1,8 +1,8 @@
-  <style onload="wfunc()">
+<style id="st">
       img {
         width: 100%;
         height: 100%;
       }
-  </style>
+</style>
    <div id="divWriteups" class="divWriteups">
   </div>
