--- a/404.html
+++ b/404.html
@@ -1,17 +1,18 @@
 <!DOCTYPE HTML>
 <html>
 <head>
+  <!--404-->
   <title>rmcsec</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta charset="UTF-8">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="style.css">
-  <link rel="icon" type="image/x-icon" href="img/favicon.ico">
-  <script type="module" src="js/script.js"></script>
-  <script src="js/route.js"></script>
-  <script src="js/writeups.js"></script>
+  <link rel="stylesheet" href="/style.css">
+  <link rel="icon" type="image/x-icon" href="/img/favicon.ico">
+  <script type="module" src="/js/script.js"></script>
+  <script src="/js/route.js" type='module'></script>
+  <script src="/js/writeups.js" type='module'></script>
 <style>
 .navbar {
   width: 50vw;
@@ -68,14 +69,16 @@ ul { /* navbar */
   <div id="nav">
   <div class="navbar">  
         <ul>
-          <a href="/" class="l" onclick="route()">HOME</a>
-          <a href="/" class="l" onclick="route()">ABOUT</a>
-          <a href="/" class="l" onclick="route()">SCHEDULE</a>
-          <a href="/writeups" class="l" onclick="route()">WRITEUPS</a>
-          <a href="/" class="l" onclick="route()">CONTACT</a>
+          <a href="/" class="l">HOME</a>
+          <a href="/" class="l">ABOUT</a>
+          <a href="/" class="l">SCHEDULE</a>
+          <a href="/writeups" class="l" id="lWriteups" onclick="wfunc();">WRITEUPS</a>
+          <a href="/" class="l">CONTACT</a>
         </ul>
   </div>
   </div>
-  <div id="content"></div>
+  <div id="content">
+
+  </div>
 </body>
 </html>
