--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="style.css">
-  <link rel="icon" type="image/x-icon" href="img/favicon.ico">
-  <script type="module" src="js/script.js"></script>
-  <script src="js/route.js"></script>
-  <script src="js/writeups.js"></script>
+  <link rel="stylesheet" href="/style.css">
+  <link rel="icon" type="image/x-icon" href="/img/favicon.ico">
+  <script type="module" src="/js/script.js"></script>
+  <script type="module" src="/js/route.js"></script>
+  <script src="/js/writeups.js" type='module'></script>
 <style>
 .navbar {
   width: 50vw;
@@ -68,11 +68,11 @@ ul { /* navbar */
   <div id="nav">
   <div class="navbar">  
         <ul>
-          <a href="/" class="l" onclick="route()">HOME</a>
-          <a href="/" class="l" onclick="route()">ABOUT</a>
-          <a href="/" class="l" onclick="route()">SCHEDULE</a>
-          <a href="/writeups" class="l" onclick="route()">WRITEUPS</a>
-          <a href="/" class="l" onclick="route()">CONTACT</a>
+          <a href="/" class="l">HOME</a>
+          <a href="/" class="l">ABOUT</a>
+          <a href="/" class="l">SCHEDULE</a>
+          <a href="/writeups" class="l" id="lWriteups">WRITEUPS</a>
+          <a href="/" class="l">CONTACT</a>
         </ul>
   </div>
   </div>
