Fixed oopsies. Code still cluttered

--- a/404.html
+++ b/404.html
@@ -12,12 +12,12 @@
   <script type="module" src="/js/script.js"></script>
   <script src="/js/route.js" type='module'></script>
   <script src="/js/writeups.js" type='module'></script>
-  <link rel="icon" type="image/x-icon" href="img/favicon.ico">
-  <script type="module" src="js/script.js"></script>
-  <script src="js/route.js"></script>
-  <script src="js/writeups.js"></script>
+  <link rel="icon" type="image/x-icon" href="/img/favicon.ico">
+  <script type="module" src="/js/script.js"></script>
+  <script type="module" src="/js/route.js"></script>
+  <script src="/js/writeups.js" type='module'></script>
   <style>
-      @import url('styles/style.css');
+      @import url('/styles/style.css');
   </style>
 </head>
 <body>
