--- a/pages/index.html
+++ b/pages/index.html
@@ -1,7 +1,9 @@
 <body>
     <!-- DO NOT PLACE ANYTHING ABOVE NAVBAR WITHIN BODY. BAD IDEA.-->
-    <!--To do: navbar glow + add bg-->
-    <section>
+    <!--To do: navbar glow, add bottom links sect, add top-left logo-->
+    
+    <!--stars-->
+    <section> 
       <span></span>
       <span></span>
       <span></span>
@@ -13,10 +15,35 @@
       <span></span>
       <span></span>
   </section>
+  <!--stars end-->
+  
     <div class="logo" id="logo">
       <img src="img/fullsize.png" width="40%" class="center" position="fixed" onload="fetchData('/md/n00bzCTF_2024/web_focus-on-yourSELF.md', 'render')"> 
     </div>
+
     <div class="f-writeup">
       <p id="render"></p>
     </div>
+
+
+    <!--TEMPORARY FOOTER-->
+    <footer>
+      <div>
+        <img src="img/mini.png" width="3.8%" style="margin-top: 4%; padding-top: 2%; padding-left: 10%;">
+
+        <a href="https://instagram.com/">
+          <img src="img/instagram.svg" width="3%" style="margin-top: 4%; padding-top: 2%; padding-left: 1%;">
+        </a>
+
+        <a href="https://github.com/rm-csec/rm-csec.github.io/">
+          <img src="img/github.svg" width="3%" style="margin-top: 4%; padding-top: 2%; padding-left: 1%;">
+        </a> 
+
+        <a href="mailto:rm.cybersec@protonmail.com">
+          <img src="img/mail.svg" width="3%" style="margin-top: 4%; padding-top: 2%; padding-left: 1%; filter: invert(1);">
+        </a>
+
+        <p class="body-font-bold" style="display: inline; margin-top:2%;">proudly open source</p>
+      </div>
+    </footer>
 </body>
