Removed fucntions occupying global namespace

--- a/index.html
+++ b/index.html
@@ -10,24 +10,20 @@
   <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&display=swap" rel="stylesheet">
   <link rel="icon" type="image/x-icon" href="/img/favicon.ico">
   <script type="module" src="/js/script.js"></script>
-  <script src="/js/route.js" type='module'></script>
-  <script src="/js/writeups.js" type='module'></script>
-  <link rel="icon" type="image/x-icon" href="/img/favicon.ico">
-  <script type="module" src="/js/script.js"></script>
-  <script type="module" src="/js/route.js"></script>
   <script src="/js/writeups.js" type='module'></script>
   <style>
       @import url('/styles/style.css');
   </style>
 </head>
 <body>
+<!--rmctf{h3ll0_7h3r3}-->
   <div id="nav">
   <div class="navbar">  
         <ul>
-          <a href="/" class="l">HOME</a>
+          <a href="/" class="l" id="home">HOME</a>
           <a href="/" class="l">ABOUT</a>
           <a href="/" class="l">SCHEDULE</a>
-          <a href="/writeups" class="l" id="lWriteups" onclick="wfunc();">WRITEUPS</a>
+          <a href="/writeups" class="l" id="lWriteups">WRITEUPS</a>
           <a href="/" class="l">CONTACT</a>
         </ul>
   </div>
@@ -36,4 +32,6 @@
 
   </div>
 </body>
+<script src="/js/route.js" type='module'></script>
+<script type="module" src="/js/script.js"></script>
 </html>
