--- a/pages/index.html
+++ b/pages/index.html
@@ -18,7 +18,7 @@
   <!--stars end-->
   
     <div class="logo" id="logo">
-      <img src="img/fullsize.png" width="40%" class="center" position="fixed" onload="fetchData('/md/n00bzCTF_2024/web_focus-on-yourSELF.md', 'render')"> 
+      <img src="img/fullsize.png" width="40%" class="center" position="fixed"> 
     </div>
 
     <div class="f-writeup">
