--- a/404.html
+++ b/404.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <!--404-->
+  <!--rmctf{h3ll0_7h3r3}-->
   <title>rmcsec</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta charset="UTF-8">
@@ -24,7 +25,7 @@
   <div id="nav">
   <div class="navbar">  
         <ul>
-          <a href="/" class="l">HOME</a>
+          <a href="/" class="l" id="home">HOME</a>
           <a href="/" class="l">ABOUT</a>
           <a href="/" class="l">SCHEDULE</a>
           <a href="/writeups" class="l" id="lWriteups" onclick="wfunc();">WRITEUPS</a>
