temp navbar fix

--- a/pages/index.html
+++ b/pages/index.html
@@ -27,23 +27,27 @@
 
 
     <!--TEMPORARY FOOTER-->
+    
+    <!--to-do
+    make icons change color on hover (fundamental redesign)
+    add open source text that is VERTICALLLY CENTERED (fundamental redesign too :sob: )-->
+
     <footer>
       <div>
-        <img src="img/mini.png" width="3.8%" style="margin-top: 4%; padding-top: 2%; padding-left: 10%;">
+        <img src="img/mini.png" width="3.8%" style="margin-top: 4%; padding-top: 2%; padding-left: 10%; display: inline-flex;">
 
-        <a href="https://instagram.com/">
-          <img src="img/instagram.svg" width="3%" style="margin-top: 4%; padding-top: 2%; padding-left: 1%;">
+        <a class="footer-link" href="https://instagram.com/">
+          <img src="img/instagram.svg" width="3%" style="margin-top: 4%; padding-top: 2%; padding-left: 1%; float: right; padding-right: 10%; display: inline-flex;">
         </a>
 
-        <a href="https://github.com/rm-csec/rm-csec.github.io/">
-          <img src="img/github.svg" width="3%" style="margin-top: 4%; padding-top: 2%; padding-left: 1%;">
+        <a class="footer-link" href="https://github.com/rm-csec/rm-csec.github.io/">
+          <img src="img/github.svg" width="3%" style="margin-top: 4%; padding-top: 2%; padding-left: 1%; float: right; display: inline-flex;" hover>
         </a> 
 
-        <a href="mailto:rm.cybersec@protonmail.com">
-          <img src="img/mail.svg" width="3%" style="margin-top: 4%; padding-top: 2%; padding-left: 1%; filter: invert(1);">
+        <a class="footer-link" href="mailto:rm.cybersec@protonmail.com">
+          <img src="img/mail.svg" width="3%" style="margin-top: 4%; padding-top: 2%; padding-left: 1%; filter: invert(1); float: right; display: inline-flex;">
         </a>
 
-        <p class="body-font-bold" style="display: inline; margin-top:2%;">proudly open source</p>
       </div>
     </footer>
 </body>
