--- a/index.html
+++ b/index.html
@@ -31,6 +31,14 @@
   <div id="content">
 
   </div>
+  <script>
+    if(screen.width <= 700){
+      window.onLoad = function(){
+        var element = document.getElementById('nav'); //stackoverflow my beloved
+        element.parentNode.removeChild(element); 
+      }
+    }
+  </script>
 </body>
 <script src="/js/route.js" type='module'></script>
 <script type="module" src="/js/script.js"></script>
