--- a/pages/index-mobile.html
+++ b/pages/index-mobile.html
@@ -18,10 +18,10 @@
   <!--stars end-->
   
     <div class="logo" id="logo">
-      <img src="img/fullsize.png" width="40%" class="center" position="fixed"> 
+      <img src="img/fullsize.png" width="80%" class="center" position="fixed"> 
     </div>
 
-    <div class="f-writeup">
+    <div class="f-writeup-mobile">
       <p id="render"></p>
     </div>
 
@@ -34,18 +34,18 @@
 
     <footer>
       <div>
-        <img id="bottomFlag" src="img/mini.png" style="width: 3.8%; margin-top: 4%; padding-top: 2%; padding-left: 10%; display: inline-flex;">
+        <img id="bottomFlag" src="img/mini.png" style="width: 10%; margin-top: 2%; padding-top: 2%; padding-left: 10%; display: inline-flex;">
 
         <a class="footer-link" href="https://www.instagram.com/rm.csec/">
-          <img src="img/instagram.svg" width="3%" style="margin-top: 4%; padding-top: 2%; padding-left: 1%; float: right; padding-right: 10%; display: inline-flex;">
+          <img src="img/instagram.svg" width="7%" style="margin-top: 2%; padding-top: 2%; padding-left: 2%; float: right; padding-right: 10%; display: inline-flex;">
         </a>
 
         <a class="footer-link" href="https://github.com/rm-csec/rm-csec.github.io/">
-          <img src="img/github.svg" width="3%" style="margin-top: 4%; padding-top: 2%; padding-left: 1%; float: right; display: inline-flex;" hover>
+          <img src="img/github.svg" width="7%" style="margin-top: 2%; padding-top: 2%; padding-left: 2%; float: right; display: inline-flex;" hover>
         </a> 
 
         <a class="footer-link" href="mailto:rm.cybersec@protonmail.com">
-          <img src="img/mail.svg" width="3%" style="margin-top: 4%; padding-top: 2%; padding-left: 1%; filter: invert(1); float: right; display: inline-flex;">
+          <img src="img/mail.svg" width="7%" style="margin-top: 2%; padding-top: 2%; padding-left: 2%; filter: invert(1); float: right; display: inline-flex;">
         </a>
 
       </div>
