mobile classes added

--- a/pages/writeups-mobile.html
+++ b/pages/writeups-mobile.html
@@ -4,5 +4,5 @@
         height: 100%;
       }
 </style>
-   <div id="divWriteups" class="divWriteups">
+   <div id="divWriteups" class="mobileDivWriteups">
   </div>
