heavy navbar improvements

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
   <div id="nav">
   <div class="navbar" id=navbar>  
         <ul>
+          <img src="img/mini.png" style="width: 6%; display: inline-block; margin-right: 4%; vertical-align: middle;">
           <a href="/" class="l" id="home">HOME</a>
           <a href="/" class="l">ABOUT</a>
           <a href="/" class="l">SCHEDULE</a>
