added about and members page

--- a/404.html
+++ b/404.html
@@ -2,7 +2,6 @@
 <html>
 <head>
   <!--404-->
-  <!--rmctf{h3ll0_7h3r3}-->
   <title>rmcsec</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta charset="UTF-8">
@@ -11,34 +10,30 @@
   <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&display=swap" rel="stylesheet">
   <link rel="icon" type="image/x-icon" href="/img/favicon.ico">
   <script type="module" src="/js/script.js"></script>
-  <script src="/js/route.js" type='module'></script>
-  <script src="/js/writeups.js" type='module'></script>
-  <link rel="icon" type="image/x-icon" href="/img/favicon.ico">
-  <script type="module" src="/js/script.js"></script>
-  <script type="module" src="/js/route.js"></script>
   <script src="/js/writeups.js" type='module'></script>
   <style>
       @import url('/styles/style.css');
   </style>
 </head>
 <body>
+<!--rmctf{h3ll0_7h3r3}-->
   <div id="nav">
-  <div class="navbar">  
+  <div class="navbar" id=navbar>  
         <ul>
+          <img src="/img/mini.png" style="width: 6%; display: inline-block; margin-right: 4%; vertical-align: middle;">
           <a href="/" class="l" id="home">HOME</a>
-          <a href="/" class="l">ABOUT</a>
-          <a href="/" class="l">SCHEDULE</a>
-          <a href="/writeups" class="l" id="lWriteups" onclick="wfunc();">WRITEUPS</a>
-          <a href="/" class="l">CONTACT</a>
+          <a href="/about" class="l">ABOUT</a>
+          <a href="/members" class="l">MEMBERS</a>
+          <a href="/writeups" class="l" id="lWriteups">WRITEUPS</a>
         </ul>
   </div>
   </div>
   <div id="content">
 
   </div>
-
 <script>
     if(screen.width <= 700){
+      console.log(1);
       window.onload = function(){
         var element = document.getElementById('nav'); //stackoverflow my beloved
         element.parentNode.removeChild(element); 
@@ -46,4 +41,6 @@
     }
 </script>
 </body>
+<script src="/js/route.js" type='module'></script>
+<script type="module" src="/js/script.js"></script>
 </html>
