--- a/index.html
+++ b/index.html
@@ -20,12 +20,11 @@
   <div id="nav">
   <div class="navbar" id=navbar>  
         <ul>
-          <img src="img/mini.png" style="width: 6%; display: inline-block; margin-right: 4%; vertical-align: middle;">
+          <img src="/img/mini.png" style="width: 6%; display: inline-block; margin-right: 4%; vertical-align: middle;">
           <a href="/" class="l" id="home">HOME</a>
-          <a href="/" class="l">ABOUT</a>
-          <a href="/" class="l">SCHEDULE</a>
+          <a href="/about" class="l">ABOUT</a>
+          <a href="/members" class="l">MEMBERS</a>
           <a href="/writeups" class="l" id="lWriteups">WRITEUPS</a>
-          <a href="/" class="l">CONTACT</a>
         </ul>
   </div>
   </div>
