--- a/pages/about.html
+++ b/pages/about.html
@@ -1,34 +1,25 @@
-<body>
-    <!-- DO NOT PLACE ANYTHING ABOVE NAVBAR WITHIN BODY. BAD IDEA.-->
-    <!--To do: navbar glow, add bottom links sect, add top-left logo-->
-    
-    <!--stars-->
-  <section> 
-      <span></span>
-      <span></span>
-      <span></span>
-      <span></span>
-      <span></span>
-      <span></span>
-      <span></span>
-      <span></span>
-      <span></span>
-      <span></span>
-  </section>
-  <!--stars end-->
-  
-    <div class="logo" id="logo">
-      <img src="img/fullsize.png" width="40%" class="center" position="fixed"> 
-    </div>
-
-    
-
-    <!--TEMPORARY FOOTER-->
-
-    <!--to-do
-    make icons change color on hover (fundamental redesign)
-    add open source text that is VERTICALLLY CENTERED (fundamental redesign too :sob: )-->
-
+<style>
+#yapping {
+  color: white; 
+  text-decoration: none;
+  font-family: "Space Mono", monospace;
+  font-weight: 400;
+  font-style: normal;
+  font-size: 1vw;
+  margin:5%;
+  text-align: center;
+} 
+</style>
+<div id="yapping">
+  <div style="display: inline-block; text-align: left;">
+  > Richard Montgomery HS Cybersecurity Club, RMCSEC <br>
+  > Formed by a group of cybersecurity enthusiasts <br>
+  > Explore several cybersecurity concepts while solving challenges <br>
+  > Short lessons on cybersecurity concepts with challneges you can practice <br>
+  > Opportunities to participate in competitions and cybersecurity related events <br>
+  > Join now: <a href="https://docs.google.com/forms/d/16kNlapVRlJBpS-emV6a_L2hG76z0UQMfdWBvMfJ31lI">https://docs.google.com/forms/d/16kNlapVRlJBpS-emV6a_L2hG76z0UQMfdWBvMfJ31lI</a>
+  </div>
+</div>
     <footer>
       <div>
         <img id="bottomFlag" src="img/mini.png" style="width: 3.8%; margin-top: 4%; padding-top: 2%; padding-left: 10%; display: inline-flex;">
@@ -47,4 +38,4 @@
 
       </div>
     </footer>
-</body>
+
