minro changes im too tired for ts bro

--- a/pages/about.html
+++ b/pages/about.html
@@ -8,6 +8,7 @@
   font-size: 1vw;
   margin:5%;
   text-align: center;
+  animation: fadein 0.5s;
 } 
 </style>
 <div id="yapping">
@@ -20,7 +21,7 @@
   > Join now: <a href="https://docs.google.com/forms/d/16kNlapVRlJBpS-emV6a_L2hG76z0UQMfdWBvMfJ31lI">https://docs.google.com/forms/d/16kNlapVRlJBpS-emV6a_L2hG76z0UQMfdWBvMfJ31lI</a>
   </div>
 </div>
-    <footer>
+    <footer style="animation: none">
       <div>
         <img id="bottomFlag" src="img/mini.png" style="width: 3.8%; margin-top: 4%; padding-top: 2%; padding-left: 10%; display: inline-flex;">
 
