--- a/pages/index.html
+++ b/pages/index.html
@@ -29,7 +29,7 @@
     make icons change color on hover (fundamental redesign)
     add open source text that is VERTICALLLY CENTERED (fundamental redesign too :sob: )-->
 
-    <footer>
+    <footer style="animation: none">
       <div>
         <img id="bottomFlag" src="img/mini.png" style="width: 3.8%; margin-top: 4%; padding-top: 2%; padding-left: 10%; display: inline-flex;">
 
