--- a/pages/members.html
+++ b/pages/members.html
@@ -10,6 +10,7 @@
   font-weight: 400;
   font-style: normal;
   color:#fdf800;
+  animation: fadein 0.5s
 }
 b {
   text-decoration: none;
@@ -19,6 +20,7 @@ b {
   font-weight: 400;
   font-style: normal;
   background-color: #000000;
+  animation: fadein 0.5s
 }
 </style>
 <div id="mem">
