major style improvements

--- a/pages/about.html
+++ b/pages/about.html
@@ -11,7 +11,7 @@
   animation: fadein 0.5s;
 } 
 </style>
-<div id="yapping">
+<div id="yapping"> <!-- id=yapping is insane dipa -->
   <div style="display: inline-block; text-align: left;">
   > Richard Montgomery HS Cybersecurity Club, RMCSEC <br>
   > Formed by a group of cybersecurity enthusiasts <br>
