baby mobile site + fixes

--- a/pages/index-mobile.html
+++ b/pages/index-mobile.html
@@ -21,8 +21,39 @@
       <img src="img/fullsize.png" width="80%" class="center" position="fixed"> 
     </div>
 
-    <div class="f-writeup-mobile">
-      <p id="render"></p>
+<div style="height: 70vw;">
+      <div class="f-writeup1">
+        <div style="width: 50%;">
+          <h2>Hello, and Welcome!</h2>
+          <h4>Category: Announcements</h4>
+        </div>
+        <div style="margin-top: 2.25%; margin-left:5%">
+          <p2>We're so glad to have you here for the 2024-2025 season! Whether or not you attended the intrest meeting, here's a few things to give you a headstart on your cybersecurity journey.</p2>
+        </div>
+      </div>
+      <div class="f-writeup2" style="justify-content: left; height: auto;">
+        <br>
+        <ol>
+          <li>Join our Discord!</li>
+          <p>All of our Announcements, communications, and off-campus practice will take place over Discord. Save yourself the hassle of looking for it by joining it now in just 2 clicks!</p>
+          <br>
+
+          <li>Familerize yourself with the CTF format</li>
+          <p>If you're intrested in cybersecurity competions, you will find yourself right at home with capture the flag events, or more commonly referred to as CTFs. Online or offline, CTFs are timed competions in which you are given a set of scenarios that you exploit in order to find a special code, or the flag. It is very important to understand these events, as almost all of our competitions will follow the CTF format, including our very own! (;</p>
+          <br>
+
+          <li>Understand writeups</li>
+          <p>Writeups are (one of) your best friends for CTF practice. Writeups give you a detailed walkthrough of a method taken to solve a problem at a CTF and even explain commonly used strategies if you aren't familiar with them yet. Check our few out at the top.</p>
+          <br>
+
+          <li>Sign-up for our email list!</li>
+          <p>Don't check Discord too often? The email list is perfect for you. We send out emails before our meetings and provide helpful resources gone over in-meeting in case you missed one. We suggest signing up just in case.</p>
+          <br>
+
+          <p>We like to keep our announcements short and sweet, that's why you'll find MUCH more information in our Discord (and why we're pushing for it so much). Nevertheless, this list will keep you prepared for our first meeting and the many to come.</p>
+          <p>To a great year! -RMCSEC Leadership</p>
+        </ol>
+      </div>
     </div>
 
 
@@ -31,8 +62,9 @@
     <!--to-do
     make icons change color on hover (fundamental redesign)
     add open source text that is VERTICALLLY CENTERED (fundamental redesign too :sob: )-->
-
-    <footer>
+    <br>
+    <!--
+    <footer style="position: sticky;">
       <div>
         <img id="bottomFlag" src="img/mini.png" style="width: 11%; margin-top: -2%; padding-top: 2%; padding-left: 5%; display: inline-flex;">
 
@@ -50,4 +82,5 @@
 
       </div>
     </footer>
+  -->
 </body>
