--- a/pages/about.html
+++ b/pages/about.html
@@ -21,7 +21,7 @@
   > Join now: <a href="https://docs.google.com/forms/d/16kNlapVRlJBpS-emV6a_L2hG76z0UQMfdWBvMfJ31lI">https://docs.google.com/forms/d/16kNlapVRlJBpS-emV6a_L2hG76z0UQMfdWBvMfJ31lI</a>
   </div>
 </div>
-    <footer style="animation: none">
+    <footer style="animation: none; position: fixed;">
       <div>
         <img id="bottomFlag" src="img/mini.png" style="width: 3.8%; margin-top: 4%; padding-top: 2%; padding-left: 10%; display: inline-flex;">
 
