--- a/pages/index.html
+++ b/pages/index.html
@@ -1,6 +1,5 @@
 <body>
     <!-- DO NOT PLACE ANYTHING ABOVE NAVBAR WITHIN BODY. BAD IDEA.-->
-    <!--To do: navbar glow, add bottom links sect, add top-left logo-->
     
     <!--stars-->
   <section> 
@@ -20,6 +19,8 @@
     <div class="logo" id="logo">
       <img src="img/fullsize.png" width="40%" class="center" position="fixed"> 
     </div>
+
+
     <div>
       <div class="f-writeup1">
         <div style="width: 50%;">
@@ -30,7 +31,7 @@
           <p2>We're so glad to have you here for the 2024-2025 season! Whether or not you attended the intrest meeting, here's a few things to give you a headstart on your cybersecurity journey.</p2>
         </div>
       </div>
-      <div class="f-writeup2" style="justify-content: left; height: 45vw;">
+      <div class="f-writeup2" style="justify-content: left; height: auto;">
         <br>
         <ol>
           <li>Join our Discord!</li>
