--- a/pages/members.html
+++ b/pages/members.html
@@ -31,3 +31,21 @@ b {
   ├── <b>Yegor K: Class of 2026 </b><br>
   └── <b>Cynthia L: Class of 2027 </b><br>
 </div>
+<footer style="animation: none; position: fixed;">
+  <div>
+    <img id="bottomFlag" src="img/mini.png" style="width: 3.8%; margin-top: 4%; padding-top: 2%; padding-left: 10%; display: inline-flex;">
+
+    <a class="footer-link" href="https://www.instagram.com/rm.csec/">
+      <img src="img/instagram.svg" width="3%" style="margin-top: 4%; padding-top: 2%; padding-left: 1%; float: right; padding-right: 10%; display: inline-flex;">
+    </a>
+
+    <a class="footer-link" href="https://github.com/rm-csec/rm-csec.github.io/">
+      <img src="img/github.svg" width="3%" style="margin-top: 4%; padding-top: 2%; padding-left: 1%; float: right; display: inline-flex;" hover>
+    </a> 
+
+    <a class="footer-link" href="mailto:rm.cybersec@protonmail.com">
+      <img src="img/mail.svg" width="3%" style="margin-top: 4%; padding-top: 2%; padding-left: 1%; filter: invert(1); float: right; display: inline-flex;">
+    </a>
+
+  </div>
+</footer>
