mobile emergency fix

--- a/pages/index-mobile.html
+++ b/pages/index-mobile.html
@@ -21,7 +21,7 @@
       <img src="img/fullsize.png" width="80%" class="center" position="fixed"> 
     </div>
 
-<div style="height: 70vw;">
+<div style="height: auto;">
       <div class="f-writeup1">
         <div style="width: 50%;">
           <h2>Hello, and Welcome!</h2>
