--- a/pages/index-mobile.html
+++ b/pages/index-mobile.html
@@ -17,9 +17,28 @@
   </section>
   <!--stars end-->
   
+
+<!-- hamburger main menu (mobile) --> 
+
+
+<div id="inhamburger" class="hamburger" onclick="toggleMenu()">
+  <div id="b1" class="bar" style="background-color: #ffffff;"></div>
+  <div id="b2" class="bar" style="background-color: #ffffff;"></div>
+  <div id="b3" class="bar" style="background-color: #ffffff;"></div>
+ </div>
+
+<div class="menu-container" id="menu">
+  <div class="menu-item" style="padding-bottom: 30%;"><a href="/" style="font-size: 8vw; color:white;">HOME</a></div>
+  <div class="menu-item" style="padding-bottom: 20%;"><a href="/about" style="font-size: 8vw; color:white;">ABOUT</a></div>
+  <div class="menu-item" style="padding-bottom: 10%;"><a href="/members" style="font-size: 8vw; color:white;">MEMBERS</a></div>
+  <div class="menu-item" style="padding-bottom: 0%;"><a href="/writeups" style="font-size: 8vw; color:rgb(255, 255, 255);">WRITEUPS</a></div>
+  <img id="bottomFlag" src="img/mini.png" style="width: 10%; height: auto; position: absolute; bottom: 2.5%; right: 5%;">
+</div> 
+
     <div class="logo" id="logo">
       <img src="img/fullsize.png" width="80%" class="center" position="fixed"> 
     </div>
+    
 
 <div style="height: auto;">
       <div class="f-writeup1">
