css img link fix

--- a/pages/index-mobile.html
+++ b/pages/index-mobile.html
@@ -85,18 +85,18 @@
    
     <footer style="position: sticky;">
       <div>
-        <img id="bottomFlag" src="img/mini.png" style="width: 11%; margin-top: -2%; padding-top: 2%; padding-left: 5%; display: inline-flex;">
+        <img id="bottomFlag" src="/img/mini.png" style="width: 11%; margin-top: -2%; padding-top: 2%; padding-left: 5%; display: inline-flex;">
 
         <a class="footer-link" href="https://www.instagram.com/rm.csec/">
-          <img src="img/instagram.svg" width="9%" style="margin-top: -1%; padding-top: 0%; padding-left: 3%; float: right; padding-right: 5%; display: inline-flex;">
+          <img src="/img/instagram.svg" width="9%" style="margin-top: -1%; padding-top: 0%; padding-left: 3%; float: right; padding-right: 5%; display: inline-flex;">
         </a>
 
         <a class="footer-link" href="https://github.com/rm-csec/rm-csec.github.io/">
-          <img src="img/github.svg" width="9%" style="margin-top: -1%; padding-top: 0%; padding-left: 3%; float: right; display: inline-flex;" hover>
+          <img src="/img/github.svg" width="9%" style="margin-top: -1%; padding-top: 0%; padding-left: 3%; float: right; display: inline-flex;" hover>
         </a> 
 
         <a class="footer-link" href="mailto:rm.cybersec@protonmail.com">
-          <img src="img/mail.svg" width="9%" style="margin-top: -1%; padding-top: 0%; padding-left: 3%; filter: invert(1); float: right; display: inline-flex;">
+          <img src="/img/mail.svg" width="9%" style="margin-top: -1%; padding-top: 0%; padding-left: 3%; filter: invert(1); float: right; display: inline-flex;">
         </a>
 
       </div>
